[gd_scene load_steps=5 format=3 uid="uid://ckmo1ie5lqtc5"]

[ext_resource type="Texture2D" uid="uid://b47xn3qbnasen" path="res://assets/frames/hidden_frame_blank.png" id="1_rbpvn"]
[ext_resource type="Script" path="res://memory_tile/memory_tile.gd" id="2_3fksn"]
[ext_resource type="Texture2D" uid="uid://eki3wb7s4ogc" path="res://assets/frames/blue_frame.png" id="2_tl7i6"]
[ext_resource type="Texture2D" uid="uid://rdljympfpjsx" path="res://assets/glitch/banana.png" id="3_nkrgk"]

[node name="MemoryTile" type="TextureButton" groups=["tile"]]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -42.0
offset_right = 42.0
offset_bottom = 42.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture_normal = ExtResource("1_rbpvn")
script = ExtResource("2_3fksn")

[node name="FrameImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(42, 42)
texture = ExtResource("2_tl7i6")

[node name="ItemImage" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(32, 32)
texture = ExtResource("3_nkrgk")

[connection signal="pressed" from="." to="." method="_on_pressed"]
